# full-stack-todo-list-application

./: .gitignore  docker-compose.yml
auth/: Dockerfile.dev
auth/app/: helpers.py  main.py  models.py  settings.py
backend/auth/: pyproject.toml
backend/auth/app/: helpers.py  main.py  models.py  settings.py
backend/todo/: pyproject.toml
backend/todo/todo/: main.py
frontend/: package-lock.json  package.json  tailwind.config.js  types.ts
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/email-verification/: page.tsx
frontend/app/login/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/reset-code/: page.tsx
frontend/app/reset-password/: page.tsx
frontend/app/send-code/: page.tsx
frontend/app/signup/: page.tsx
frontend/app/signup-confirmation/: page.tsx
frontend/components/common/alerts/: AlertItem.tsx  (+1 more)
frontend/components/login/: LoginForm.tsx  TroubleSigningIn.tsx
frontend/components/reset-password/: ResetPasswordForm.tsx
frontend/components/send-code/: SendCodeForm.tsx
frontend/components/signup/: SignupForm.tsx
frontend/components/verify-email/: VerifyEmailForm.tsx
frontend/context/: actionTypes.ts
frontend/context/alert/: AlertState.tsx  alertContext.ts  alertReducer.ts
frontend/context/auth/: AuthState.tsx  authContext.ts  authReducer.ts
frontend/utils/: ROUTES.ts
frontend/utils/functions/: checkEmail.ts  checkEmpty.ts  checkName.ts  checkPassword.ts  checkPhone.ts  checkVerificationCode.ts  index.ts
llm_query/: pyproject.toml
todo/: Dockerfile.dev
todo/todo/: main.py  models.py
(+18 files in other folders)
